# uiTestingCpp

./: CMakeLists.txt  Clicker.sln  OverrideC.cmake  OverrideCXX.cmake  README.md  build_release.bat
Clicker/: CMakeLists.txt  Clicker.cpp  Clicker.vcxproj  contextMenu.ps1  myLib.cpp  myLib.h  util.cpp  util.h
